--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,11 @@
 # This file configures github.com/golangci/golangci-lint.
 
 run:
-  timeout: 20m
+  timeout: 50m
   tests: true
   # default is true. Enables skipping of directories:
   #   vendor$, third_party$, testdata$, examples$, Godeps$, builtin$
-  skip-dirs-use-default: true
+  skip-dirs-use-default: false
   skip-files:
     - core/genesis_alloc.go
 
